test/classes/errors/newValueNotType2.good
newValueNotType2.chpl:7: syntax error: 'new' expression is missing its argument list
newValueNotType2.chpl:10: syntax error: 'new' expression is missing its argument list
